<resources>
    <string name="app_name">ToDo List</string>
    <string name="hello_world">Hello World!</string>
    <string name="save">Save</string>
    <string name="task">Task</string>
    <string name="task_name">Enter your task</string>
    <string name="to_do">What should you do?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="two_buttons_dialog">Alert box with two buttons</string>
    <string name="hint">Enter something</string>
    <string name="done">Done</string>
    <string name="set_notification">Set notification\nfor this date</string>
    <string name="choose_date">Choose a due date</string>
    <string name="description">Description</string>
    <string name="editing_task">Editing task</string>
    <string name="new_task_name">New task name</string>
    <string name="new_task_description">New task description</string>
    <string name="empty_task">Can\'t make empty task, sorry !</string>
    <string name="task_added">Add task </string>
    <string name="cancel_add">Add task canceled</string>
    <string name="rename_empty">Can\'t rename task with empty title, sorry !</string>
    <string name="task_space">Task </string>
    <string name="deleted_space"> deleted</string>
</resources>
