<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/custom_dialog_layout_design_user_input"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:weightSum="1">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editing_task"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/name"
        android:layout_marginTop="25sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:ellipsize="start"
        android:hint="@string/new_task_name"/>

    <EditText
        android:id="@+id/edit_description"
        android:layout_marginTop="25sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:ellipsize="start"
        android:hint="@string/new_task_description"/>


</LinearLayout>
