<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_marginTop="10dp"
            android:textColor="#000000"
            android:textSize="25sp"
            android:layout_width="242dp"
            android:layout_height="wrap_content"
            android:text="@string/task_name"
            android:id="@+id/details"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="30sp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_gravity="center_horizontal"
            android:ellipsize="start"
            android:gravity="center_horizontal"
            android:hint="@string/task"
            android:ems="7"
            android:layout_marginTop="25sp"
            android:id="@+id/task" />

        <Button
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_gravity="center_horizontal"
            android:id="@+id/save" />

    </LinearLayout>
</RelativeLayout>